@@ -1,5 +1,14 @@
 2003-02-28  Kevin Vandersloot <kfv101@psu.edu>
 
+	* procdialogs.c: some more HIGifying. Add some space to some dialogs
+	
+	* favorties.c: HIG stuff. Remove the frame and provide some space and a mnemonic
+	for the tree
+	
+	* memmaps.c: some space
+
+2003-02-28  Kevin Vandersloot <kfv101@psu.edu>
+
 	* load-graph.c: do the configure event even if the graphs aren't displayed. Fixes bug #70101.
 	
 	* callbacks.c: force a graph redraw when tab switched to reduce the delay
